--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "2d-fighter.sln"
+    "dotnet.defaultSolution": "final-project.sln"
 }
